# rust-mcp-schema

./: .gitignore  .release-config.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  development.md  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md  settings.yml
.github/DISCUSSION_TEMPLATE/: feature-requests.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  lint-pr.yml  publish.yml  release-pr.yml
examples/: mcp_client_handle_message.rs  mcp_server_handle_message.rs
scripts/: run_clippy.sh  run_test.sh
src/: generated_schema.rs  rust-mcp-schema.rs
src/generated_schema/: protocol_version.rs
src/generated_schema/2024_11_05/: mcp_schema.rs  schema_utils.rs  validators.rs
src/generated_schema/2025_03_26/: mcp_schema.rs  schema_utils.rs  validators.rs
src/generated_schema/2025_06_18/: mcp_schema.rs  schema_utils.rs  validators.rs
src/generated_schema/2025_11_25/: mcp_schema.rs  schema_utils.rs  validators.rs
src/generated_schema/draft/: mcp_schema.rs  schema_utils.rs  validators.rs
tests/: 2024_11_05_exclusive.rs  draft_exclusive.rs  main.rs  miscellaneous.rs  serde_smoke_test.rs  test_deserialize.rs  test_protocol_version.rs  test_serialize.rs
tests/before_2025_11_25/: miscellaneous.rs  mod.rs  serde_smoke_test.rs  test_2024_11_05_exclusive.rs  test_deserialize.rs  test_serialize.rs
tests/common/: common.rs  sample_mcp_messages.json
tests/v2025_11_25/: mod.rs  schema_2025_11_25.rs  test_schema_utils.rs
